k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ioclweb
  namespace: priartechnoworld-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: ${CI_REGISTRY_IMAGE}:${CI_COMMIT_SHA}
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: gitlab-registry-secret
