k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: flask-app
  namespace: priartechnoworld-dev
spec:
  to:
    kind: Service
    name: flask-app
  port:
    targetPort: 8080
